# oxzip

./: Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: app-window.slint
