[package]
name = "oxzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.8.0", features = ["serde"] }
chrono = "0.4.39"
humansize = "2.0.0"
dirs = "6.0.0"
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.8.0"
